# abacus

./: .gitignore  index.html  package.json  pnpm-lock.yaml  setup-ios.sh  vite.config.ts
docs/: PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: style.css
