[package]
name = "abacus"
version = "0.1.0"
description = "A Tauri iOS App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_ios_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "ios")'.dependencies]
swift-rs = "1.0.7"
